# fuzzer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
compiler/: CMakeLists.txt  mirage_clang.c
driver/: CMakeLists.txt  MirageInstrumentor.cc
example/: build-jhead.sh  fuzz-jhead.sh
fuzzer/: CMakeLists.txt  Makefile  afl-fuzz.c  enhancement.h  fuzz_enhance.c
inc/: NestedIf.hpp  Pass.h  alloc-inl.h  android-ashmem.h  config.h  debug.h  defs.h  hash.h  types.h  utils.h
lib/: a.out  build-lib.sh
lib/libdft64/: Dockerfile  README.md
lib/libdft64/src/: ins_binary_op.cpp  ins_helper.h  ins_movsx_op.cpp  ins_movzx_op.cpp  ins_movzx_op.h  ins_shift_op.cpp  ins_shift_op.h  ins_special_op.cpp  ins_special_op.h  ins_unitary_op.cpp  ins_xfer_op.cpp  libdft_api.cpp  libdft_core.cpp  makefile.rules  syscall_hook.cpp  tagmap.cpp
lib/udis86/: example  example.c
lib/udis86/tests/: libcheck.c
pass/: BasicBlockIDAssigner.cc  BasicBlockRenamePass.cc  CMakeLists.txt  EdgeIDAssigner.cc  IntegratedCovPhantom.cpp  Mirage.cpp  MiragePass.cpp  NestedIf.cc  NestedIf.cpp  NestedIfAnalysis.cc  PhantomPass.cc  SimpleSimplifyCFG.cc  SourcePass.cc  TaintSinkPass.cc  afl-llvm-pass.cc  compare-transform-pass.so.cc  split-compares-pass.so.cc  split-switches-pass.so.cc  utils.cc
pass/inc/: NestedIf.hpp  Pass.h  abilist.h  util.h  utils.h  version.h
pin_track/: CMakeLists.txt  Makefile  build.sh  cond_stmt.h  logger.h  makefile.rules  pin_stub.c  pin_track.cpp  todo.md
runtime/: CMakeLists.txt  afl-llvm-rt.o.c  afl_driver.cpp  dta-rt.c  dta_driver.cpp  integrated-rt.o.c  phantom-rt.o.c  source-rt.o.c
